tests/error/misc_errors/negative_nat_arg.err
Error: Invalid type argument (at $FILE:6:22)
  | 
4 | 
5 | @compile_guppy
6 | def foo(x: array[int, -5]) -> None:
  |                       ^^ Not a valid type argument

Guppy compilation failed due to 1 previous error
